# Harmony

./: .gitattributes  .gitignore  README.md
runtime/: .editorconfig  CMakeLists.txt  CMakePresets.json
runtime/.cmake/: build_configurations.cmake  common.cmake  compiler.cmake  corebuildsetting.cmake  definitions.cmake  header_generater.py  thirdparty.cmake  windows_setting.cmake
runtime/Runtime/: CMakeLists.txt
runtime/Runtime/private/: main.cpp
runtime/Runtime/public/: main.h
runtime/bat/: Edit.bat
runtime/core/: CMakeLists.txt
runtime/core/HMModAudio/: CMakeLists.txt
runtime/core/HMModInput/: CMakeLists.txt
runtime/core/HMModNetwork/: CMakeLists.txt
runtime/core/HMModNetwork/private/: HMModNetwork.cpp
runtime/core/HMModNetwork/public/: HMModNetwork.h  INetWorkModule.h  IProtocol.h  ITCPClient.h
runtime/core/HMModPhysics/: CMakeLists.txt
runtime/core/HMModPhysics/public/: HMModPhysics.h
runtime/core/HMModRenderer/: CMakeLists.txt
runtime/core/HMModRenderer/private/: HMModRenderer.cpp
runtime/core/HMModRenderer/public/: GraphicsPrimitives.h  HMModRenderer.h  ICommandBuffer.h  IConstantBuffer.h  IIndexBuffer.h  IMaterial.h  IRenderingAPI.h  IRenderterget.h  IShaderObject.h  IShaderResourceView.h  ISwapchain.h  ITexture2D.h  IVertexBuffer.h  VertexType.h
runtime/core/HMModResourceManager/: CMakeLists.txt
runtime/core/HMModResourceManager/private/: HMModResourceManager.cpp
runtime/core/HMModResourceManager/public/: HMModResourceManager.h
runtime/core/HMModSceneManager/: CMakeLists.txt
runtime/core/HMModSceneManager/generate/: Component.gen.cpp  Component.generate.h  GameObject.gen.cpp  GameObject.generate.h  Renderer.gen.cpp  Renderer.generate.h  Transform.gen.cpp  Transform.generate.h
runtime/core/HMModSceneManager/private/: Camera.cpp  Component.cpp  DBScene.cpp  DBScene.h  DynamicScene.cpp  DynamicScene.h  GameObject.cpp  HMModSceneManager.cpp  Renderer.cpp  RootScene.cpp  RootScene.h  Scene.cpp  SceneBace_impl.cpp  SceneBace_impl.h  StaticBackgroundScene.cpp  StaticBackgroundScene.h  StaticMeshRenderer.cpp  StaticScene.cpp  StaticScene.h  Transform.cpp  UIScene.cpp  UIScene.h
runtime/core/HMModSceneManager/public/: Behavior.h  Camera.h  Component.h  GameObject.h  HMModSceneManager.h  Renderer.h  Scene.h  StaticMeshRenderer.h  Transform.h  serialize.h
runtime/core/HMModWindow/: CMakeLists.txt
runtime/core/HMModWindow/private/: HMModWindow.cpp
runtime/core/HMModWindow/public/: HMModWindow.h  IWindow.h
runtime/core/public/: Core.hpp
runtime/coreplugin/: CMakeLists.txt
runtime/coreplugin/HMBoostAsio/: CMakeLists.txt
runtime/editor/: CMakeLists.txt
runtime/editor/HMModConsole/: CMakeLists.txt
runtime/editor/HMModHierarchy/: CMakeLists.txt
runtime/editor/HMModIPCManager/: CMakeLists.txt
runtime/editor/HMModLevelEditor/: CMakeLists.txt
runtime/generate/: AsioTCPIP.generate.inc  Behavior.generate.inc  Camera.generate.inc  Component.generate.inc  DBScene.generate.inc  DynamicScene.generate.inc  EventManager.generate.inc  GameLoopManager.generate.inc  GameObject.generate.inc  GenerateMacro.generate.inc  GraphicsPrimitives.generate.inc  HMBoostAsio.generate.inc  HMDirectX12ConstantBuffer.generate.inc  HMDirectX12DescriptorPool.generate.inc  HMDirectX12IndexBuffer.generate.inc  HMDirectX12Material.generate.inc  HMDirectX12Rendertarget.generate.inc  HMDirectX12ShaderObject.generate.inc  HMDirectX12Swapchain.generate.inc  HMDirectX12Texture2D.generate.inc  HMDirectX12VertexBuffer.generate.inc  HMModConsole.generate.inc  HMModDirectX12.generate.inc  HMModHierarchy.generate.inc  HMModIPCManager.generate.inc  HMModLevelEditor.generate.inc  HMModNetwork.generate.inc  HMModRenderer.generate.inc  HMModResourceManager.generate.inc  HMModSceneManager.generate.inc  HMModWin32.generate.inc  HMModWindow.generate.inc  HMObject.generate.inc  ICommandBuffer.generate.inc  IConstantBuffer.generate.inc  IIndexBuffer.generate.inc  IJsonSerializer.generate.inc  IMaterial.generate.inc  IModule.generate.inc  INetWorkModule.generate.inc  (+22 more)
runtime/generater/: GenarateMacro.h  class_config.py  config.py  generatermain.py  test.h  util.py
runtime/generater/generate/: test.gen.cpp  test.generate.h
runtime/main/: CMakeLists.txt  main.cpp  main.h
runtime/main/EventManager/: CMakeLists.txt
runtime/main/GameLoopManager/: CMakeLists.txt
runtime/main/JobSystem/: CMakeLists.txt
runtime/main/LogManager/: CMakeLists.txt
runtime/main/ModuleManager/: CMakeLists.txt
runtime/main/Object/: CMakeLists.txt
runtime/main/Reflecter/: CMakeLists.txt
runtime/main/Reflection/: CMakeLists.txt
runtime/main/Runtime/: CMakeLists.txt
runtime/main/Serializer/: CMakeLists.txt
runtime/main/TypeManager/: CMakeLists.txt
runtime/main/Utility/: CMakeLists.txt
runtime/main/UtilityCore/: CMakeLists.txt
runtime/main/generate/: Float3.gen.cpp  Float3.generate.h  HMObject.gen.cpp  HMObject.generate.h  Matrix4x4.gen.cpp  Matrix4x4.generate.h  Quaternion.gen.cpp  Quaternion.generate.h  Vector3f.gen.cpp  Vector3f.generate.h
runtime/main/public/: Utility.hpp
runtime/platform/: CMakeLists.txt
runtime/platform/windows/: CMakeLists.txt
runtime/utility/: HMJson.h  HMMetaFile.h  HMString.h
(+514 files in other folders)
